# doc2msg

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.cpu.yml  docker-compose.yml  run.sh
ai-docs/: design-spec-document-conversion-service.md  design-spec.md  doc2agent-execution-record.md  doc2agent-implementation-plan.md  doc2agent-latency-optimization-record.md  execution-record-document-conversion-service.md  execution-record-latency-optimization.md  execution-record.md
docker/: entrypoint.sh
src/: cache.rs  chunker.rs  config.rs  lib.rs  main.rs  metrics.rs  normalizer.rs  pdfium.rs  resolver.rs  server.rs  stream.rs
src/ocr/: decode.rs  detector.rs  mod.rs  preprocess.rs  recognizer.rs
src/pipeline/: image.rs  markdown.rs  mod.rs  pdf.rs  web.rs
tests/: test_image.rs  test_latency.rs  test_ocr.rs  test_pdf.rs  test_web.rs
tests/benchmarks/: ocr_benchmark_cuda_results.json  ocr_benchmark_cuda_results.txt  ocr_benchmark_results.json  ocr_benchmark_results.txt  ocr_benchmark_trt_results.json  ocr_benchmark_trt_results.txt  run_ocr_benchmark.sh
tests/common/: mod.rs
tests/fixtures/: sample.html
