[package]
name = "doc2agent"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Ultra-fast document to agent-friendly output microservice"

[features]
default = []
cuda-ep = ["ort/cuda"]
tensorrt-ep = ["ort/tensorrt"]

[dependencies]
axum = { version = "0.8", features = ["json", "tokio", "http1"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "stream"] }
readability = "0.3"
url = "2"
html2md = "0.2"
pdf-extract = "0.10"
pdfium-render = "0.8.37"
fast_image_resize = { version = "6", features = ["image"] }
image = "=0.25.8"
ort = { version = "=2.0.0-rc.10", features = ["ndarray"] }
ndarray = "0.16"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
bytes = "1"
mime_guess = "2"
thiserror = "2"
anyhow = "1"
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["trace", "limit", "timeout", "compression-gzip"] }
futures-util = "0.3"
libloading = "=0.8.6"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
axum-test = "16"
